--- a/spring/.settings/org.eclipse.core.resources.prefs
+++ b/spring/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/ly/test/spring/aop/java\u52A8\u6001\u4EE3\u74062/MyProxy.java=UTF-8
+encoding/<project>=GBK
