--- a/spring.dao/pom.xml
+++ b/spring.dao/pom.xml
@@ -12,18 +12,42 @@
 		<hibernate.version>4.3.7.Final</hibernate.version>
 		<hibernate.search.version>5.0.0.Final</hibernate.search.version>
 		<hibernate.validator.version>5.1.3.Final</hibernate.validator.version>
-
+		
 		<mysql.version>5.1.27</mysql.version>
-		<druid-version>1.0.14</druid-version>
+		
+		<spring.version>4.2.5.RELEASE</spring.version>
+		<saas.version>0.0.4-SNAPSHOT</saas.version>
+		<redis.version>2.8.1</redis.version>
+		<jedis.version>2.7.3</jedis.version>
+		<spring-data-redis.version>1.7.1.RELEASE</spring-data-redis.version>
+
+		<servlet.version>2.5</servlet.version>
+		<commons-lang3.version>3.4</commons-lang3.version>
+		<commons.io.version>2.2</commons.io.version>
+		<jackson-mapper-asl.version>1.9.5</jackson-mapper-asl.version>
+		<commons.fileupload.version>1.3.1</commons.fileupload.version>
+		<httpclient.version>4.3.3</httpclient.version>
+
+		<jpinyin.version>1.0</jpinyin.version>
+		<slf4j.api.version>1.7.21</slf4j.api.version>
+		<logback.version>1.1.7</logback.version>
+		<Jackson.core.version>2.3.0</Jackson.core.version>
+		<coo.version>2.1.9</coo.version>
+
+		<!-- 编译参数 -->
+		<jdk.version>1.7</jdk.version>
+		<encoding>UTF-8</encoding>
+		<plugin.compiler.version>3.1</plugin.compiler.version>
+		<plugin.resources.version>2.6</plugin.resources.version>
+		<plugin.war.version>2.4</plugin.war.version>
+		<plugin.source.version>2.2.1</plugin.source.version>
+		<plugin.javadoc.version>2.9.1</plugin.javadoc.version>
+		<plugin.release.version>2.5</plugin.release.version>
+		<svnjava.version>2.1.0</svnjava.version>
 	</properties>
 
 	<dependencies>
-		<!-- druid -->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>${druid-version}</version>
-		</dependency>
+
 		<!-- 数据库连接池配置 -->
 		<dependency>
 			<groupId>c3p0</groupId>
@@ -36,7 +60,7 @@
 			<version>${mysql.version}</version>
 		</dependency>
 
-		<!-- hibernate持久化 -->
+		<!-- hibernate持久化 仅用来做分库测试-->
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
@@ -46,14 +70,14 @@
 				developing Hibernate JPA implementation. See README.md for details</description>
 		</dependency>
 
-		<!-- hibernate持久化 ORM -->
+		<!-- hibernate持久化 ORM  仅用来做分库测试-->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-
-
+		
+		
 		<!-- spring 的基本依赖 开始 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -117,7 +141,7 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
@@ -129,120 +153,53 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-			<packaging>jar</packaging>
-			<version>1.8.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-			<packaging>jar</packaging>
-			<version>1.8.4</version>
-		</dependency>
 		<!-- spring 的基本依赖 结束 -->
-
-		<!-- logback -->
+		
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.7</version>
-		</dependency>
-
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <!-- log start 独立引用 -->
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.1.2</version>
-		</dependency>
-
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+		<!-- log start -->
+		<!-- json tool start -->
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.1.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.logback-extensions</groupId>
-			<artifactId>logback-ext-spring</artifactId>
-			<version>0.1.2</version>
-		</dependency>
-		<!-- logging end -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mapdb</groupId>
-			<artifactId>mapdb</artifactId>
-			<version>1.0.7</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.univocity</groupId>
-			<artifactId>univocity-parsers</artifactId>
-			<version>1.5.4</version>
-			<type>jar</type>
-		</dependency>
-
-		<!-- zookeeper -->
-		<dependency>
-			<groupId>org.apache.curator</groupId>
-			<artifactId>curator-framework</artifactId>
-			<version>2.9.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.curator</groupId>
-			<artifactId>curator-test</artifactId>
-			<version>2.9.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.16</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${Jackson.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
-			<version>1.2.7</version>
+			<version>1.2.8</version>
 		</dependency>
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20151123</version>
-		</dependency>
-
-		<!-- Apache tool -->
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.2</version>
-		</dependency>
-
-
+		<!-- json toole end -->
 	</dependencies>
 </project>
